--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "envify": "^4.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "terser": "^5.44.1",
+    "terser-brunch": "^4.1.0",
+    "uglifyify": "^5.0.2",
     "vite": "^7.2.4"
   }
 }
